commit translated contents

--- a/docs/code-quality/c26408.md
+++ b/docs/code-quality/c26408.md
@@ -8,16 +8,16 @@ helpviewer_keywords:
 - C26408
 ms.assetid: 55b0706f-1107-41c1-8ad0-c9e1e86a3b8c
 description: Regola CppCoreCheck che impone Linee guida di base di C++ R. 10
-ms.openlocfilehash: 65dfb102a26db01ac32ee2cf04e7f3321eb08092
-ms.sourcegitcommit: e58918c45316d799c1952ca7797a85adbcd0c472
+ms.openlocfilehash: cbaacf80d1ee3a98c1d3aa5e06036c1bd1611ac2
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/01/2020
-ms.locfileid: "89281861"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91509573"
 ---
 # <a name="c26408-no_malloc_free"></a>C26408 NO_MALLOC_FREE
 
-Questo avviso contrassegna il punto `malloc` in cui o `free` viene richiamato in modo esplicito in base a R. 10: evitare `malloc` e `free` . Una possibile correzione per tali avvisi può essere l'uso di [std:: make_unique](/cpp/standard-library/memory-functions#make_unique) per evitare la creazione e la distruzione esplicite di oggetti. Se questa correzione non è accettabile, è consigliabile preferire Operator [New ed Delete](/cpp/cpp/new-and-delete-operators) . In alcuni casi, se le eccezioni non sono benvenute `malloc` e `free` possono essere sostituite con la versione nothrow degli operatori `new` e `delete` .
+Questo avviso contrassegna il punto `malloc` in cui o `free` viene richiamato in modo esplicito in base a R. 10: evitare `malloc` e `free` . Una possibile correzione per tali avvisi può essere l'uso di [std:: make_unique](../standard-library/memory-functions.md#make_unique) per evitare la creazione e la distruzione esplicite di oggetti. Se questa correzione non è accettabile, è consigliabile preferire Operator [New ed Delete](../cpp/new-and-delete-operators.md) . In alcuni casi, se le eccezioni non sono benvenute `malloc` e `free` possono essere sostituite con la versione nothrow degli operatori `new` e `delete` .
 
 ## <a name="remarks"></a>Osservazioni
 
@@ -26,9 +26,11 @@ Questo avviso contrassegna il punto `malloc` in cui o `free` viene richiamato in
 - Per rilevare Free (), le funzioni globali vengono controllate con i nomi "Free" o "STD:: Free" che non restituiscono alcun risultato e accettano un parametro, che è un puntatore a **`void`** .
 
 ## <a name="see-also"></a>Vedere anche
+
 [Linee guida di base di C++ R. 10](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r10-avoid-malloc-and-free)
 
 ## <a name="example"></a>Esempio
+
 ```cpp
 #include <new>
 
