--- a/docs/code-quality/c26447.md
+++ b/docs/code-quality/c26447.md
@@ -7,12 +7,12 @@ f1_keywords:
 - C26447
 helpviewer_keywords:
 - C26447
-ms.openlocfilehash: 3776a2eefbc4ef331ee19edc5e0df1d5cc5c5fdd
-ms.sourcegitcommit: 7f378314c5692d897ead10b7f6c96d4cb2abd266
+ms.openlocfilehash: 5e7a7336ae6434ae3f227e3d3cc46ae19498c34b
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/27/2020
-ms.locfileid: "88972660"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91509259"
 ---
 # <a name="c26447-dont_throw_in_noexcept"></a>DONT_THROW_IN_NOEXCEPT C26447
 
@@ -25,7 +25,7 @@ Linee guida di base di C++: \
 
 Questa regola modifica un'altra regola, [C26440 DECLARE_NOEXCEPT](c26440.md), che tenta di trovare funzioni che sono candidati validi per contrassegnare come **`noexcept`** . In questo caso, l'idea è che, una volta contrassegnata una funzione come **`noexcept`** , deve mantenerne il contratto non richiamando altro codice che può generare eccezioni.
 
-- Il compilatore Microsoft C++ gestisce già violazioni semplici come **`throw`** le istruzioni nel corpo della funzione (vedere [C4297](/cpp/error-messages/compiler-warnings/compiler-warning-level-1-c4297)).
+- Il compilatore Microsoft C++ gestisce già violazioni semplici come **`throw`** le istruzioni nel corpo della funzione (vedere [C4297](../error-messages/compiler-warnings/compiler-warning-level-1-c4297.md)).
 - La regola si concentra solo sulle chiamate di funzione. Contrassegna le destinazioni che non sono **`constexpr`** e che potenzialmente possono generare eccezioni. In altre parole, non vengono contrassegnate in modo esplicito come non generate tramite **`noexcept`** , **`__declspec(nothrow)`** o **throw ()**.
 - Le funzioni di destinazione generate dal compilatore vengono ignorate per ridurre il rumore poiché le specifiche di eccezione non vengono sempre fornite dal compilatore.
 - Il controllo Ignora anche i tipi speciali di funzioni di destinazione che si prevede di implementare come. **`noexcept`** questa regola viene applicata da [C26439 SPECIAL_NOEXCEPT](c26439.md).
@@ -37,7 +37,7 @@ Questa regola modifica un'altra regola, [C26440 DECLARE_NOEXCEPT](c26440.md), ch
 #include <string>
 #include <istream>
 
-std::vector<std::string> collect(std::istream& is) noexcept 
+std::vector<std::string> collect(std::istream& is) noexcept
 {
     std::vector<std::string> res;
     for (std::string s; is >> s;) // C26447, `operator bool()` can  throw, std::string's allocator can throw
