--- a/docs/code-quality/c6001.md
+++ b/docs/code-quality/c6001.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6001
 ms.assetid: 55e779f1-7295-48f7-8ce1-b43898b36cd8
-ms.openlocfilehash: e71f0b066f65f3ad80a693509a8592a5ffe60303
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 1f728c006a8ddfc87331aae618a927be840c6685
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420958"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91509219"
 ---
 # <a name="c6001"></a>C6001
 
-> avviso C6001: utilizzo di memoria non inizializzata \<variabile >
+> avviso C6001: utilizzo di memoria non inizializzata \<variable>
 
 Questo avviso viene segnalato quando viene usata una variabile locale non inizializzata prima che venga assegnato un valore. Questo può causare risultati imprevedibili. È sempre necessario inizializzare le variabili prima dell'uso.
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso perché la variabile `i` viene inizializzata solo se `b` è true; in caso contrario viene restituita una `i` non inizializzata:
+Il codice seguente genera questo avviso perché la variabile `i` viene inizializzata solo se `b` è true. in caso contrario, viene restituito un oggetto non inizializzato `i` :
 
 ```cpp
 int f( bool b )
@@ -53,4 +53,4 @@ int f( bool b )
 
 ## <a name="see-also"></a>Vedere anche
 
-[Avviso del compilatore (livello 1 e livello 4) C4700](/cpp/error-messages/compiler-warnings/compiler-warning-level-1-and-level-4-c4700)
+[Avviso del compilatore (livello 1 e livello 4) C4700](../error-messages/compiler-warnings/compiler-warning-level-1-and-level-4-c4700.md)
