--- a/docs/code-quality/c6314.md
+++ b/docs/code-quality/c6314.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6314
 ms.assetid: 2145ca62-967c-4223-b582-f1481b74f181
-ms.openlocfilehash: 7278d06c441e108209a0b7aaf38210130baffa69
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 06db54f53427974d8fedcf919a1c4ba1e15e6ab1
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419796"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91509208"
 ---
 # <a name="c6314"></a>C6314
 
 > avviso C6314: ordine errato delle operazioni: l'operatore OR bit per bit ha precedenza più alta rispetto all'operatore di espressione condizionale. Aggiungere le parentesi per chiarire lo scopo
 
-Questo messaggio indica che è stata rilevata un'espressione che contiene un operatore OR bit per bit (`|`) nell'espressione testata di un'operazione condizionale (`?:`).
+Questo messaggio indica che è stata rilevata un'espressione che contiene un operatore OR bit per bit ( `|` ) nell'espressione testata di un'operazione condizionale ( `?:` ).
 
 L'operatore condizionale ha una precedenza minore rispetto agli operatori bit per bit. Se l'espressione testata deve contenere l'operatore OR bit per bit, è necessario aggiungere le parentesi attorno all'espressione condizionale.
 
@@ -48,5 +48,5 @@ int f(int SignalValue)
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore OR bit per bit inclusivo: &#124;](/cpp/cpp/bitwise-inclusive-or-operator-pipe)
-- [Operatore condizionale: ? :](/cpp/cpp/conditional-operator-q)
+- [Operatore OR bit per bit inclusivo: &#124;](../cpp/bitwise-inclusive-or-operator-pipe.md)
+- [Operatore condizionale: ? :](../cpp/conditional-operator-q.md)
