--- a/docs/code-quality/c6318.md
+++ b/docs/code-quality/c6318.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6318
 ms.assetid: 3284a83e-bb8e-461c-adcc-cfc66ceea05e
-ms.openlocfilehash: ed49e96624ae332d59005c9e7ee117d19d8ab752
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 2da61e999542703d9846d7bb581f1691ec80d0f5
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419719"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91509182"
 ---
 # <a name="c6318"></a>C6318
 
-> avviso C6318: __try/_except\_definito in modo non corretto: utilizzo della costante EXCEPTION_CONTINUE_SEARCH o di un'altra costante che restituisce zero nell'espressione di filtro eccezioni. Il codice nel blocco del gestore eccezioni non viene eseguito
+> avviso C6318: __try/_except definito in modo non corretto \_ : utilizzo della costante EXCEPTION_CONTINUE_SEARCH o di un'altra costante che restituisce zero nell'espressione di filtro eccezioni. Il codice nel blocco del gestore eccezioni non viene eseguito
 
-Questo avviso indica che se si verifica un'eccezione nel blocco protetto di questo gestore di eccezioni strutturate, l'eccezione non verrà gestita perché nell'espressione di filtro eccezioni viene utilizzata la costante `EXCECPTION_CONTINUE_SEARCH`.
+Questo avviso indica che se si verifica un'eccezione nel blocco protetto di questo gestore di eccezioni strutturate, l'eccezione non verrà gestita perché la costante `EXCECPTION_CONTINUE_SEARCH` viene utilizzata nell'espressione di filtro delle eccezioni.
 
 Questo codice è equivalente al blocco protetto senza il blocco del gestore eccezioni perché il blocco del gestore non viene eseguito.
 
@@ -68,4 +68,4 @@ void f (char *pch)
 
 ## <a name="see-also"></a>Vedere anche
 
-[Istruzione try-except](/cpp/cpp/try-except-statement)
+[Istruzione try-except](../cpp/try-except-statement.md)
