--- a/docs/code-quality/c6332.md
+++ b/docs/code-quality/c6332.md
@@ -7,16 +7,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6332
 ms.assetid: 93d74b3f-4070-4b48-807e-52b1dfee1330
-ms.openlocfilehash: 81c4f3c5ea90b9723a5c24ebac1aa0ab7bfcdbaa
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 745223ed6c133622cb91d306d9abe79791c43b92
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419565"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91509856"
 ---
 # <a name="c6332"></a>C6332
 
-> avviso C6332: parametro non valido: il passaggio di zero come parametro dwFreeType a \<funzione > non è consentito. Ciò comporta l'esito negativo della chiamata
+> avviso C6332: parametro non valido: il passaggio di zero come parametro dwFreeType a \<function> non è consentito. Ciò comporta l'esito negativo della chiamata
 
 Questo avviso indica che un parametro non valido viene passato a VirtualFree o VirtualFreeEx. VirtualFree e VirtualFreeEx rifiutano entrambi un parametro dwFreeType pari a zero. Il parametro dwFreeType può essere MEM_DECOMMIT o MEM_RELEASE. Tuttavia, i valori MEM_DECOMMIT e MEM_RELEASE non possono essere utilizzati insieme nella stessa chiamata. Assicurarsi inoltre che il valore restituito della funzione VirtualFree non venga ignorato.
 
@@ -98,7 +98,7 @@ VOID f( VOID )
 }
 ```
 
-L'uso di VirtualAlloc e VirtualFree presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL ( C++ Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di VirtualAlloc e VirtualFree presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
 ## <a name="see-also"></a>Vedere anche
 
