--- a/docs/code-quality/c26402.md
+++ b/docs/code-quality/c26402.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C26402
 ms.assetid: b9d3d398-697a-4a5d-8bfe-9c667dffb90b
-ms.openlocfilehash: fd0b965353e5a2fd0201dec0875918c7bdbeff14
-ms.sourcegitcommit: f1752bf90b4f869633a859ace85439ca19e208b2
+ms.openlocfilehash: 81c774fd2ffde7ceafa1aa29a939eaf27e2f3e02
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2020
-ms.locfileid: "88722115"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91509603"
 ---
 # <a name="c26402dont_heap_allocate_movable_result"></a>C26402 DONT_HEAP_ALLOCATE_MOVABLE_RESULT
 
 > `Return a scoped object instead of a heap-allocated if it has a move constructor (r.3).`
 
-## <a name="remarks"></a>Commenti
+## <a name="remarks"></a>Osservazioni
 
 Per evitare confusione se un puntatore è proprietario di un oggetto, una funzione che restituisce un oggetto mobile deve allocarla nello stack. Deve quindi restituire l'oggetto in base al valore anziché restituire un oggetto allocato dall'heap. Se è richiesta la semantica dei puntatori, restituire un puntatore intelligente anziché un puntatore non elaborato. Per altre informazioni, vedere [linee guida di base di C++ R. 3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rr-ptr): *Avvisa se una funzione restituisce un oggetto allocato all'interno della funzione ma ha un costruttore di spostamento. Si consiglia di valutare la possibilità di restituirlo in base al valore.*
 
@@ -38,7 +38,7 @@ struct S
 S* bad_example()
 {
     S* s = new S(); // C26409, avoid explicitly calling new.
-    // ... 
+    // ...
     return s; // C26402
 }
 
