--- a/docs/code-quality/c6219.md
+++ b/docs/code-quality/c6219.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6219
 ms.assetid: 889a2de8-c0dc-4e8e-a46b-735384202675
-ms.openlocfilehash: 3eafca44281f6bba093c1aabb737b73f2ee4ce59
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 4f4dd252fa0e949dfe4ac9efc0cf497a9e2db6a3
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420629"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91509872"
 ---
 # <a name="c6219"></a>C6219
 
 > avviso C6219: cast implicito tra tipi integer semanticamente diversi: confronto di HRESULT con 1 o TRUE. Prendere in considerazione l'uso della macro [succeeded](/windows/desktop/api/winerror/nf-winerror-succeeded) o [failed](/windows/desktop/api/winerror/nf-winerror-failed)
 
-Questo avviso indica che un `HRESULT` viene confrontato con un valore esplicito non`HRESULT` di uno (1). Questo confronto può causare risultati non corretti, perché il valore di successo tipico di `HRESULT` (`S_OK`) è 0. Se si confronta questo valore con un tipo booleano, viene convertito in modo implicito in false.
+Questo avviso indica `HRESULT` che è in corso il confronto con un valore esplicito, non `HRESULT` di un valore pari a uno (1). Questo confronto può causare risultati non corretti, perché il valore di successo tipico di `HRESULT` ( `S_OK` ) è 0. Se si confronta questo valore con un tipo booleano, viene convertito in modo implicito in false.
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso perché il `CoGetMalloc` restituisce un `HRESULT`, che viene quindi confrontato con `TRUE`:
+Il codice seguente genera questo avviso perché `CoGetMalloc` restituisce un oggetto `HRESULT` , che viene quindi confrontato con `TRUE` :
 
 ```cpp
 #include <windows.h>
@@ -44,7 +44,7 @@ void f( )
 }
 ```
 
-Nella maggior parte dei casi, questo avviso è causato dal codice che confronta un `HRESULT` a un valore booleano. È preferibile usare le macro `SUCCEEDED` o `FAILED` per verificare il valore di un `HRESULT`. Per correggere il problema, usare il codice seguente:
+Nella maggior parte dei casi, questo avviso è causato dal codice che confronta un oggetto `HRESULT` con un valore booleano. È preferibile usare le `SUCCEEDED` `FAILED` macro o per testare il valore di un oggetto `HRESULT` . Per correggere il problema, usare il codice seguente:
 
 ```cpp
 #include <windows.h>
@@ -66,6 +66,6 @@ void f( )
 }
 ```
 
-Per questo avviso, il tipo di `SCODE` viene considerato come `HRESULT`.
+Per questo avviso, il `SCODE` tipo viene considerato come `HRESULT` .
 
-L'uso di `malloc` e `free` (e delle API di memoria dinamica correlate) presenta molti problemi come causa di perdite di memoria ed eccezioni. Per evitare questi tipi di perdite e problemi di eccezione, usare le classi di puntatore e contenitore fornite dalla C++ libreria standard. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di `malloc` e `free` (e delle API di memoria dinamica correlate) presenta molti problemi come causa di perdite di memoria ed eccezioni. Per evitare questi tipi di perdite e problemi di eccezione, usare le classi di puntatore e contenitore fornite dalla libreria standard C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
