--- a/docs/code-quality/c6317.md
+++ b/docs/code-quality/c6317.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6317
 ms.assetid: dc771bb8-f596-4514-af0f-4b39658af365
-ms.openlocfilehash: 24dcbff469ad031fa3211d3628270e27ea426906
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 14f86b7785950b2aff01950e03fbaa9f5235d0ab
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419733"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91509194"
 ---
 # <a name="c6317"></a>C6317
 
 > avviso C6317: operatore errato: Logical-Not (!) non è interscambiabile con i complemento a uno (~)
 
-Questo avviso indica che un NOT logico (`!`) viene applicato a una costante che è probabile che sia un flag di bit. Il risultato di NOT logico è booleano; non è corretto applicare l'operatore and bit per bit (`&`) a un valore booleano. Usare l'operatore di complemento a uno (`~`) per capovolgere i flag.
+Questo avviso indica che un oggetto logico Not ( `!` ) viene applicato a una costante che è probabile che sia un flag di bit. Il risultato di NOT logico è booleano; non è corretto applicare l'operatore and bit per bit ( `&` ) a un valore booleano. Usare l' `~` operatore di complemento a uno () per capovolgere i flag.
 
 ## <a name="example"></a>Esempio
 
@@ -52,6 +52,6 @@ void f(int i)
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore AND bit per bit (&)](/cpp/cpp/bitwise-and-operator-amp)
-- [Operatore di negazione logica: !](/cpp/cpp/logical-negation-operator-exclpt)
-- [Operatore di complemento a uno: ~](/cpp/cpp/one-s-complement-operator-tilde)
+- [Operatore AND bit per bit (&)](../cpp/bitwise-and-operator-amp.md)
+- [Operatore di negazione logica:!](../cpp/logical-negation-operator-exclpt.md)
+- [Operatore di complemento a uno: ~](../cpp/one-s-complement-operator-tilde.md)
