--- a/docs/code-quality/c6322.md
+++ b/docs/code-quality/c6322.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6322
 ms.assetid: fb23d2b1-b2a0-465c-8bf5-ec039c6c7757
-ms.openlocfilehash: 47e65bfa5b350f298bf26e739a35b0f8ff4c517c
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 0f228d7edc91344dea1e30e1e78c340a81a97053
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419691"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91509151"
 ---
 # <a name="c6322"></a>C6322
 
@@ -67,4 +67,4 @@ void f(char *pch)
 
 ## <a name="see-also"></a>Vedere anche
 
-[Istruzione try-except](/cpp/cpp/try-except-statement)
+[Istruzione try-except](../cpp/try-except-statement.md)
