--- a/docs/code-quality/c6331.md
+++ b/docs/code-quality/c6331.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6331
 ms.assetid: cb1ecc2c-29a5-4c57-acf2-0954a4c047b1
-ms.openlocfilehash: 03b6144b127640137216a64d1d477a27bd317157
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 6d844dc3989453f5731ea158bba8fb8617b89ace
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419579"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91509882"
 ---
 # <a name="c6331"></a>C6331
 
-> avviso C6331: parametro non valido: il passaggio di MEM_RELEASE e MEM_DECOMMIT insieme a \<> di funzione non è consentito. Ciò comporta l'esito negativo della chiamata
+> avviso C6331: parametro non valido: non è consentito passare MEM_RELEASE e MEM_DECOMMIT insieme a \<function> . Ciò comporta l'esito negativo della chiamata
 
-Questo messaggio indica che un parametro non valido viene passato a VirtualFree o VirtualFreeEx. VirtualFree e VirtualFreeEx rifiutano entrambi i flag ( &#124; MEM_RELEASE MEM_DECOMMIT) in combinazione. Pertanto, i valori MEM_DECOMMIT e MEM_RELEASE non possono essere utilizzati insieme nella stessa chiamata.
+Questo messaggio indica che un parametro non valido viene passato a VirtualFree o VirtualFreeEx. VirtualFree e VirtualFreeEx rifiutano entrambi i flag (MEM_RELEASE &#124; MEM_DECOMMIT) in combinazione. Pertanto, i valori MEM_DECOMMIT e MEM_RELEASE non possono essere utilizzati insieme nella stessa chiamata.
 
 Non è necessario che il decommit e la versione vengano eseguiti come passaggi indipendenti. Il rilascio della memoria di cui è stato eseguito il commit eliminerà anche le pagine. Assicurarsi inoltre che il valore restituito di questa funzione non venga ignorato.
 
@@ -100,7 +100,7 @@ VOID f( VOID )
 }
 ```
 
-Si noti che l'uso di malloc e della versione gratuita (e delle API di allocazione della memoria dinamica correlate) presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL ( C++ Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+Si noti che l'uso di malloc e della versione gratuita (e delle API di allocazione della memoria dinamica correlate) presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
 ## <a name="see-also"></a>Vedere anche
 
