--- a/docs/code-quality/c6384.md
+++ b/docs/code-quality/c6384.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6384
 ms.assetid: 9c605b61-1485-49a8-847b-41170193dbf4
-ms.openlocfilehash: 34fd173dcf5201544d8625059f569647d8bb7507
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 2fd3ffce77bd6591404536177060f607ef2054ae
+ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419453"
+ms.lasthandoff: 09/29/2020
+ms.locfileid: "91509807"
 ---
 # <a name="c6384"></a>C6384
 
@@ -76,9 +76,9 @@ void f( )
 }
 ```
 
-Si noti che l'uso di New e Delete presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL ( C++ Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+Si noti che l'uso di New e Delete presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
 ## <a name="see-also"></a>Vedere anche
 
-- [_mbsnbcpy_s, _mbsnbcpy_s_l](/cpp/c-runtime-library/reference/mbsnbcpy-s-mbsnbcpy-s-l)
-- [sizeof Operator](/cpp/cpp/sizeof-operator) (Operatore sizeof)
+- [_mbsnbcpy_s, _mbsnbcpy_s_l](../c-runtime-library/reference/mbsnbcpy-s-mbsnbcpy-s-l.md)
+- [Operatore sizeof](../cpp/sizeof-operator.md)
