commit translated contents

--- a/docs/code-quality/c33020.md
+++ b/docs/code-quality/c33020.md
@@ -12,18 +12,18 @@ helpviewer_keywords:
 - C33020
 dev_langs:
 - C++
-ms.openlocfilehash: d9b3dd032976863f1cc47724af5c67c1b177b5bb
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: c8cfa984f48a7543e47b8a232e7cbb99c8346159
+ms.sourcegitcommit: b5854134553db1d99a5761bec131841c374a3098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91509250"
+ms.lasthandoff: 10/12/2020
+ms.locfileid: "91958685"
 ---
 # <a name="c33020"></a>C33020
 
 > Avviso C33020: rilevato utilizzo HRESULT non corretto.
 
-Si tratta di un avviso con attendibilità elevata che indica che la funzione di restituzione HRESULT restituisce FALSE o false.
+Si tratta di un avviso con attendibilità elevata che indica che la funzione di restituzione HRESULT restituisce FALSE.
 
 ## <a name="example"></a>Esempio
 
