--- a/docs/code-quality/c33022.md
+++ b/docs/code-quality/c33022.md
@@ -12,18 +12,18 @@ helpviewer_keywords:
 - C33022
 dev_langs:
 - C++
-ms.openlocfilehash: d701e422762fa8da01eba9072bac09a059955ca8
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: 8913a75a09616c8e0b2bb559a0afbcfb914d42de
+ms.sourcegitcommit: b5854134553db1d99a5761bec131841c374a3098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91509235"
+ms.lasthandoff: 10/12/2020
+ms.locfileid: "91958672"
 ---
 # <a name="c33022"></a>C33022
 
 > Avviso C33022: rilevato utilizzo HRESULT potenzialmente errato (bassa confidenza)
 
-Si tratta di un avviso di bassa confidenza per una funzione che restituisce HRESULT, se è "FALSE" o "false" in un punto lungo la riga che alla fine la restituisce o la assegna a una variabile restituita.
+Si tratta di un avviso di bassa confidenza per una funzione che restituisce HRESULT, se è presente "FALSE" in un punto lungo la riga che alla fine la restituisce o la assegna a una variabile restituita.
 
 ## <a name="example"></a>Esempio
 
