commit translated contents

--- a/docs/code-quality/c6262.md
+++ b/docs/code-quality/c6262.md
@@ -1,32 +1,52 @@
 ---
 title: C6262
-ms.date: 11/04/2016
+description: Descrizione e risoluzione del C6262 di avviso di analisi del codice di Visual Studio C++.
+ms.date: 10/14/2020
 ms.topic: reference
 f1_keywords:
 - C6262
 helpviewer_keywords:
 - C6262
-ms.assetid: 3eddc74e-2b05-4159-a093-fd469fdcebbb
-ms.openlocfilehash: 3e26670ed039171bc316f81379df22321eb6828e
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: 8c7df48787652ffa5078166665a68ab0ed1957d8
+ms.sourcegitcommit: 6e5429e076e552b32e8bdc49480c51498d7924c1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91498858"
+ms.lasthandoff: 10/15/2020
+ms.locfileid: "92099693"
 ---
 # <a name="c6262"></a>C6262
 
-> avviso C6262: la funzione usa *constant1* byte di stack: supera/analyze: stacksize *constant2*. Provare a trasferire alcuni dati nell'heap
+> avviso C6262: la funzione usa *constant_1* byte dello stack: supera/analyze: stacksize *constant_2*. Provare a trasferire alcuni dati nell'heap
 
-Questo avviso indica che in una funzione è stato rilevato l'utilizzo dello stack che supera una soglia preimpostata (*constant2*). Le dimensioni stack frame predefinite per questo avviso sono pari a 16 KB per la modalità utente, 1 KB per la modalità kernel. Lo stack, anche in modalità utente, è limitato e l'impossibilità di eseguire il commit di una pagina di stack causa un'eccezione di overflow dello stack. La modalità kernel ha un limite di dimensioni dello stack di 12 KB, che non può essere aumentato; Pertanto, il codice in modalità kernel dovrebbe limitare in modo aggressivo l'utilizzo dello stack.
+## <a name="remarks"></a>Commenti
 
-Per risolvere il problema relativo a questo avviso, è possibile spostare alcuni dati nell'heap o in un'altra memoria dinamica.  In modalità utente, una stack frame di grandi dimensioni potrebbe non essere un problema, e questo avviso può essere eliminato, ma un stack frame elevato aumenta il rischio di un overflow dello stack. È possibile che si verifichi una grande stack frame se la funzione usa lo stack in modo intensivo o è ricorsivo. La dimensione totale dello stack in modalità utente può essere aumentata se si verifica effettivamente un overflow dello stack, ma solo fino al limite di sistema.  È possibile utilizzare l' **`/analyze`** opzione della riga di comando per modificare il valore di *constant2*, ma aumentando il rischio che un errore non venga segnalato.
+Questo avviso indica che l'utilizzo dello stack che supera una soglia preimpostata (*constant_2*) è stato rilevato in una funzione. Le dimensioni stack frame predefinite per questo avviso sono pari a 16 KB per la modalità utente, 1 KB per la modalità kernel. Lo stack, anche in modalità utente, è limitato e l'impossibilità di eseguire il commit di una pagina di stack causa un'eccezione di overflow dello stack. La modalità kernel ha un limite di dimensioni dello stack di 12 KB, che non può essere aumentato. Provare a limitare in modo aggressivo l'uso dello stack nel codice in modalità kernel.
 
-Per il codice in modalità kernel, ad esempio nei progetti driver, il valore di *constant2* è impostato su 1 KB. I driver ben scritti dovrebbero avere poche funzioni che si avvicinano a questo valore e la modifica del limite verso il basso potrebbe essere auspicabile.  Le stesse tecniche generali usate per il codice in modalità utente per ridurre le dimensioni dello stack possono essere adattate al codice in modalità kernel.
+Per risolvere il problema relativo a questo avviso, è possibile spostare alcuni dati nell'heap o in un'altra memoria dinamica. In modalità utente, una stack frame di grandi dimensioni potrebbe non essere un problema, e questo avviso può essere eliminato, ma un stack frame elevato aumenta il rischio di un overflow dello stack. È possibile che si verifichi una grande stack frame se la funzione usa lo stack in modo intensivo o è ricorsivo. La dimensione totale dello stack in modalità utente può essere aumentata se si verifica effettivamente un overflow dello stack, ma solo fino al limite di sistema.
+
+Per il codice in modalità kernel, ad esempio nei progetti driver, il valore di *constant_2* è impostato su 1 KB. I driver ben scritti dovrebbero avere poche funzioni che si avvicinano a questo valore e la modifica del limite verso il basso potrebbe essere auspicabile. Le stesse tecniche generali usate per il codice in modalità utente per ridurre le dimensioni dello stack possono essere adattate al codice in modalità kernel.
+
+## <a name="adjust-the-stack-size-to-suppress-the-warning"></a>Modificare le dimensioni dello stack per disattivare l'avviso
+
+È possibile utilizzare l' [`/analyze:stacksize`](../build/reference/analyze-code-analysis.md) opzione della riga di comando per modificare il valore di *constant_2*, ma aumentando il rischio che un errore non venga segnalato.
+
+### <a name="to-suppress-the-warning-on-the-command-line"></a>Per disattivare l'avviso nella riga di comando
+
+- Aggiungere l' *`/analyze:stacksize <new-size>`* opzione alla riga di comando del compilatore. Utilizzare un valore *`<new-size>`* maggiore di *constant_1*. Se ad esempio *constant_1* è 27180, è possibile immettere *`/analyze:stacksize 32768`* .
+
+### <a name="to-suppress-the-warning-in-the-ide"></a>Per disattivare l'avviso nell'IDE
+
+1. Nell'IDE di Visual Studio selezionare il progetto nella finestra **Esplora soluzioni** .
+
+1. Sulla barra dei menu scegliere proprietà **progetto**  >  **Properties**.
+
+1. Nella finestra di dialogo **pagine delle proprietà** selezionare la pagina delle proprietà proprietà di **configurazione**  >  **C/C++**  >  **riga di comando** .
+
+1. In **Opzioni aggiuntive**aggiungere *`/analyze:stacksize <new-size>`* , dove *`<new-size>`* è maggiore di *constant_1*. Se ad esempio *constant_1* è 27180, è possibile immettere *`/analyze:stacksize 32768`* . Scegliere **OK** per salvare le modifiche.
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso perché `char buffer` alloca 16.382 byte e la variabile di tipo Integer locale `i` alloca altri 4 byte, che insieme superano il limite di dimensioni dello stack predefinito pari a 16 KB.
+Il codice seguente genera questo avviso perché `char buffer` richiede 16.382 byte nello stack e la variabile di tipo Integer locale `i` richiede altri 4 byte, che insieme superano il limite di dimensioni dello stack predefinito pari a 16 KB.
 
 ```cpp
 // cl.exe /c /analyze /EHsc /W4
@@ -69,18 +89,10 @@ void f( )
 }
 ```
 
-L'uso di `malloc` e `free` presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [`shared_ptr`](../standard-library/shared-ptr-class.md) , [`unique_ptr`](../standard-library/unique-ptr-class.md) e [`vector`](../standard-library/vector.md) . Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
+L'uso di `malloc` e `free` presenta molti problemi, ad esempio perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria standard C++ (STL). Sono inclusi [`shared_ptr`](../standard-library/shared-ptr-class.md) , [`unique_ptr`](../standard-library/unique-ptr-class.md) e [`vector`](../standard-library/vector.md) . Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
-### <a name="to-correct-this-warning-by-adjusting-the-stack-size"></a>Per correggere questo avviso regolando le dimensioni dello stack
+## <a name="see-also"></a>Vedi anche
 
-1. Sulla barra dei menu scegliere proprietà **progetto**  >  **Properties**.
-
-1. Nella finestra di dialogo **pagine delle proprietà** selezionare la pagina delle proprietà proprietà di **configurazione**  >  **C/C++**  >  **riga di comando** .
-
-1. In **Opzioni aggiuntive**aggiungere *`/analyze:stacksize32768`* .
-
-## <a name="see-also"></a>Vedere anche
-
-- [`/STACK` (Allocazioni stack)](../build/reference/stack-stack-allocations.md)
-- [`_resetstkoflw`](../c-runtime-library/reference/resetstkoflw.md)
-- [Procedura: utilizzare i controlli runtime nativi](/visualstudio/debugger/how-to-use-native-run-time-checks)
+[`/STACK` (Allocazioni stack)](../build/reference/stack-stack-allocations.md)\
+[`_resetstkoflw`](../c-runtime-library/reference/resetstkoflw.md)\
+[Procedura: Usare controlli di runtime nativi](/visualstudio/debugger/how-to-use-native-run-time-checks)
