commit translated contents

--- a/docs/code-quality/c26400.md
+++ b/docs/code-quality/c26400.md
@@ -1,30 +1,29 @@
 ---
 title: C26400
-ms.date: 08/02/2017
-ms.topic: conceptual
+description: Descrive l'avviso di analisi del codice di Microsoft C/C++ C26400, le cause e il modo in cui risolverlo.
+ms.date: 10/23/2020
 f1_keywords:
 - C26400
 helpviewer_keywords:
 - C26400
-ms.assetid: b27e1c6d-8b52-40b3-9760-b93afef19c7a
-ms.openlocfilehash: a88eab254921560a3b77869c7c4061562e320836
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: d8bc3f4605c0a0eb766e36049fec03be79372381
+ms.sourcegitcommit: bf54b407169900bb668c85a67b31dbc0f069fe65
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87202428"
+ms.lasthandoff: 10/24/2020
+ms.locfileid: "92497161"
 ---
 # <a name="c26400-no_raw_pointer_assignment"></a>NO_RAW_POINTER_ASSIGNMENT C26400
 
-Questo controllo consente di applicare la *regola i. 11: mai trasferire la proprietà da un puntatore non elaborato (T \* )*, che è un subset della regola *R. 3: un puntatore non elaborato (a T \* ) non è proprietario.* In particolare, viene visualizzato un avviso su qualsiasi chiamata a Operator `new` che salva il risultato in una variabile di tipo puntatore non elaborato. Viene inoltre visualizzato un avviso per le chiamate a funzioni che restituiscono `gsl::owner<T>` se i risultati sono assegnati a puntatori non elaborati. L'idea è che è necessario indicare chiaramente la proprietà delle risorse di memoria. Per ulteriori informazioni, vedere la [linee guida di base di C++](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r-resource-management).
+Questo controllo consente di applicare la *regola i. 11: mai trasferire la proprietà da un puntatore non elaborato (T \* )*, che è un subset della regola *R. 3: un puntatore non elaborato (a T \* ) non è proprietario*. In particolare, viene visualizzato un avviso in caso di chiamata a `operator new` , che salva il risultato in una variabile di tipo puntatore non elaborato. Viene inoltre visualizzato un avviso per le chiamate a funzioni che restituiscono `gsl::owner<T>` se i risultati sono assegnati a puntatori non elaborati. L'idea è che è necessario indicare chiaramente la proprietà delle risorse di memoria. Per ulteriori informazioni, vedere la [linee guida di base di C++](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r-resource-management).
 
-Il modo più semplice per risolvere questo problema consiste nell'usare **`auto`** la dichiarazione se la risorsa viene assegnata immediatamente alla dichiarazione di variabile. Se ciò non è possibile, è consigliabile usare il tipo `gsl::owner<T>` . Le **`auto`** dichiarazioni inizializzate con Operator **`new`** sono "owners" perché si presuppone che il risultato di qualsiasi allocazione sia implicitamente un puntatore proprietario. Il presupposto viene trasferito alla **`auto`** variabile e considerato come `owner<T>` .
+Il modo più semplice per correggere questo avviso consiste nell'usare **`auto`** la dichiarazione se la risorsa viene assegnata immediatamente alla dichiarazione di variabile. Se questa correzione non è possibile, è consigliabile usare il tipo `gsl::owner<T>` . Le **`auto`** dichiarazioni inizializzate con Operator **`new`** sono "owners" perché si presuppone che il risultato di qualsiasi allocazione sia implicitamente un puntatore proprietario. Il presupposto viene trasferito alla **`auto`** variabile e considerato come `owner<T>` .
 
 Se questo controllo contrassegna una chiamata a una funzione che restituisce `owner<T>` , può essere un'indicazione di un bug legittimo nel codice. Fondamentalmente, punta a una posizione in cui il codice perde una nozione esplicita di proprietà (e forse la risorsa stessa).
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
-Questa regola controlla attualmente solo le variabili locali. Se l'allocazione viene assegnata a un parametro formale, a una variabile globale, a un membro di classe e così via, non viene contrassegnato. Una copertura appropriata di tali scenari è parte del lavoro futuro.
+Questa regola controlla attualmente solo le variabili locali. Se si assegna un'allocazione a un parametro formale, a una variabile globale, a un membro di classe e così via, non viene contrassegnato. Una copertura appropriata di tali scenari è prevista per il lavoro futuro.
 
 ## <a name="example-1-simple-allocation"></a>Esempio 1: allocazione semplice
 
@@ -36,7 +35,7 @@ else
     buffer = new char[bufferSize];  // C26400
 ```
 
-## <a name="example-2-simple-allocation-fixed-with-gslownert"></a>Esempio 2: allocazione semplice (correzione con GSL:: owner \<T> )
+## <a name="example-2-simple-allocation-fixed-with-gslownert"></a>Esempio 2: allocazione semplice (fisso con `gsl::owner<T>` )
 
 ```cpp
 gsl::owner<char*> buffer = nullptr;
@@ -44,7 +43,10 @@ if (useCache)
     buffer = GetCache();
 else
     buffer = new char[bufferSize];  // OK
+```
 
-Example 3: Simple allocation (fixed with auto)
+## <a name="example-3-simple-allocation-fixed-with-auto"></a>Esempio 3: allocazione semplice (fisso con `auto` )
+
+```cpp
 auto buffer = useCache ? GetCache() : new char[bufferSize]; // OK
 ```
