--- a/docs/code-quality/c6308.md
+++ b/docs/code-quality/c6308.md
@@ -1,18 +1,19 @@
 ---
 title: C6306
-ms.date: 11/04/2016
+description: Informazioni sulle cause dell'avviso C6308 di analisi del codice di Microsoft C/C++ e su come risolverli.
+ms.date: 10/23/2020
 ms.topic: reference
 f1_keywords:
 - C6308
 helpviewer_keywords:
 - C6308
 ms.assetid: 1162cd96-9037-4576-9858-0c8361a12559
-ms.openlocfilehash: 5f465768833e2240df0a0c6b78c4d70aef6976fd
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: e7f23f811030f8045ea35421b3193493c58f3e76
+ms.sourcegitcommit: bf54b407169900bb668c85a67b31dbc0f069fe65
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91504976"
+ms.lasthandoff: 10/24/2020
+ms.locfileid: "92497170"
 ---
 # <a name="c6308"></a>C6306
 
@@ -60,6 +61,7 @@ void f()
     {
       x = tmp;
     }
+    // code...
     free(x);
   }
 }
@@ -69,6 +71,6 @@ Questo avviso può generare un rumore se è presente un alias Live per il buffer
 
 Per evitare completamente questi tipi di problemi, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](../standard-library/shared-ptr-class.md), [unique_ptr](../standard-library/unique-ptr-class.md)e [vector](../standard-library/vector.md). Per altre informazioni, vedere [puntatori intelligenti](../cpp/smart-pointers-modern-cpp.md) e [libreria standard C++](../standard-library/cpp-standard-library-reference.md).
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 [C6014](../code-quality/c6014.md)
