--- a/docs/code-quality/c26407.md
+++ b/docs/code-quality/c26407.md
@@ -1,5 +1,6 @@
 ---
 title: C26407
+description: Informazioni di riferimento per Visual Studio Linee guida di base di C++ avviso di analisi del codice C26407.
 ms.date: 08/18/2020
 ms.topic: conceptual
 f1_keywords:
@@ -7,20 +8,20 @@ f1_keywords:
 helpviewer_keywords:
 - C26407
 ms.assetid: 5539907a-bfa0-40db-82a6-b860c97209e1
-ms.openlocfilehash: 99e3f981e08f3c6442104b7f02a98a2f86dc4c92
-ms.sourcegitcommit: 65fead53d56d531d71be42216056aca5f44def11
+ms.openlocfilehash: 6072f8a4331fcb5014d484ab229901970701c0cb
+ms.sourcegitcommit: 12eb6a824dd7187a065d44fceca4c410f58e121e
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2020
-ms.locfileid: "88610933"
+ms.lasthandoff: 11/06/2020
+ms.locfileid: "94334094"
 ---
 # <a name="c26407-dont_heap_allocate_unnecessarily"></a>C26407 DONT_HEAP_ALLOCATE_UNNECESSARILY
 
 Per evitare un uso non necessario dei puntatori, si tenta di rilevare modelli comuni di allocazioni locali. Ad esempio, viene rilevato quando il risultato di una chiamata a Operator **`new`** viene archiviato in una variabile locale e successivamente eliminato in modo esplicito. Supporta la [regola di linee guida di base di C++ R. 5](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r5-prefer-scoped-objects-dont-heap-allocate-unnecessarily): *preferisce gli oggetti con ambito, non allocare inutilmente gli heap*. Per risolvere il problema, usare un tipo RAII anziché un puntatore non elaborato e consentirne la gestione delle risorse. Ovviamente, non è necessario creare un tipo di wrapper per allocare un singolo oggetto. Al contrario, una variabile locale del tipo di oggetto funzionerebbe meglio.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
-- Per ridurre il numero di avvisi, l'analisi del codice rileva solo questo modello per i puntatori del proprietario. Quindi, è necessario contrassegnare prima i proprietari in modo corretto. Possiamo estenderlo facilmente per coprire i puntatori non elaborati se riceviamo [commenti e suggerimenti](https://developercommunity.visualstudio.com/spaces/62/index.html) dai clienti a supporto di questi scenari.
+- Per ridurre il numero di avvisi, l'analisi del codice rileva solo questo modello per i puntatori del proprietario. Quindi, è necessario contrassegnare prima i proprietari in modo corretto. Possiamo estenderlo facilmente per coprire i puntatori non elaborati se riceviamo commenti e suggerimenti sulla [community di sviluppatori](https://aka.ms/feedback/suggest?space=62) di Visual Studio C++ dai clienti per supportare questi scenari.
 
 - Il termine *oggetto con ambito* può essere un po' fuorviante. In generale, si consiglia di usare una variabile locale la cui durata è gestita automaticamente o un oggetto intelligente che gestisce in modo efficiente le risorse dinamiche. Gli oggetti intelligenti possono naturalmente eseguire allocazioni di heap, ma non sono espliciti nel codice.
 
