commit translated contents

--- a/docs/code-quality/c26443.md
+++ b/docs/code-quality/c26443.md
@@ -9,30 +9,33 @@ helpviewer_keywords:
 - C26443
 dev_langs:
 - C++
-ms.openlocfilehash: 3d8047bc39499969c99219a2a15beaf778c00ede
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+description: Regola relativa all'override di distruttori
+ms.openlocfilehash: 9b48f8dc42935bac1a62fe1f1f9edfd4c6bf36e6
+ms.sourcegitcommit: b38485bb3a9d479e0c5d64ffc3d841fa2c2b366f
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81369840"
+ms.lasthandoff: 11/10/2020
+ms.locfileid: "94441229"
 ---
-# <a name="c26443-no_explicit_dtor_override"></a>C26443 NO_EXPLICIT_DTOR_OVERRIDE
+# <a name="c26443-no_explicit_dtor_override"></a>NO_EXPLICIT_DTOR_OVERRIDE C26443
 
-"L'override del distruttore non deve utilizzare identificatori 'override' o 'virtual' espliciti."
+"L'override del distruttore non deve usare identificatori ' override ' o ' Virtual ' espliciti."
 
-## <a name="c-core-guidelines"></a>Linee guida di base di C
+Questo avviso è stato rimosso a partire da Visual Studio 16,8 Preview 4 per riflettere [le modifiche apportate a C. 128 nell'linee guida di base di C++](https://github.com/isocpp/CppCoreGuidelines/pull/1448).
 
-[C.128: le funzioni virtuali devono specificare esattamente uno dei file virtual, override o final](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md).
+## <a name="c-core-guidelines"></a>Linee guida di base di C++
 
-L'attuale consenso sulle linee guida di base consiste nell'escludere i distruttori dalla raccomandazione "override explicitly".
+[C. 128: le funzioni virtuali devono specificare esattamente uno dei caratteri Virtual, override o Final](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md).
+
+Il consenso attuale sulle linee guida di base consiste nell'escludere i distruttori dalla raccomandazione ' Sostituisci in modo esplicito '.
 
 ## <a name="notes"></a>Note
 
-- La regola flag esegue l'override di distruttori che utilizzano in modo esplicito identificatori 'virtual' o 'override'.
-- I distruttori possono comunque usare l'identificatore 'final' a causa della sua semantica speciale.
-- Gli avvisi vengono visualizzati nelle definizioni di funzione, non nelle dichiarazioni. Può essere fonte di confusione, poiché le definizioni non dispongono di identificatori virtuali, ma l'avviso è ancora appropriato.
+- I flag di regola eseguono l'override dei distruttori che usano in modo esplicito gli identificatori ' Virtual ' o ' override '.
+- I distruttori possono comunque usare l'identificatore ' final ' a causa della relativa semantica speciale.
+- Gli avvisi vengono visualizzati nelle definizioni di funzione, non nelle dichiarazioni. Potrebbe creare confusione, poiché le definizioni non hanno identificatori virtuali, ma l'avviso è ancora appropriato.
 
-## <a name="example-explicit-override"></a>Esempio: "override" esplicito
+## <a name="example-explicit-override"></a>Esempio:' override ' esplicito
 
 ```cpp
 class Transaction {
@@ -51,4 +54,4 @@ public:
 
 ## <a name="see-also"></a>Vedere anche
 
-[C.128: Le funzioni virtuali devono specificare esattamente uno dei file virtual, override o final](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
+[C. 128: le funzioni virtuali devono specificare esattamente uno dei caratteri virtuali, di sostituzione o finali](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
