--- a/docs/code-quality/c26454.md
+++ b/docs/code-quality/c26454.md
@@ -1,4 +1,5 @@
 ---
+description: "Altre informazioni su: overflow aritmetico: l'operazione '% operator%' produce un risultato negativo senza segno in fase di compilazione"
 title: C26454
 keywords: C26454
 ms.date: 01/08/2017
@@ -9,16 +10,16 @@ helpviewer_keywords:
 - C26454
 dev_langs:
 - C++
-ms.openlocfilehash: f44c49a7463a12fa3069e63b2d849f286ab9c835
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: fc58176efd833840b53464c2ab58a2a79e67a349
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81331780"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97171114"
 ---
-# <a name="arithmetic-overflow-operator-operation-produces-a-negative-unsigned-result-at-compile-time"></a>Overflow aritmetico: l'operazione '%operator%' produce un risultato non con segno negativo in fase di compilazione
+# <a name="arithmetic-overflow-operator-operation-produces-a-negative-unsigned-result-at-compile-time"></a>Overflow aritmetico: l'operazione '% operator%' produce un risultato negativo senza segno in fase di compilazione
 
-  Questo avviso indica che l'operazione di sottrazione produce un risultato negativo che è stato valutato in un contesto senza segno. Ciò può causare overflow indesiderati.
+  Questo avviso indica che l'operazione di sottrazione produce un risultato negativo che è stato valutato in un contesto senza segno. Questo può causare un overflow imprevisto.
 
 ## <a name="example"></a>Esempio
 
@@ -30,7 +31,7 @@ unsigned int negativeunsigned()
 }
 ```
 
-Per correggere questo avviso, utilizzare il codice seguente:To correct this warning, use the following code:
+Per correggere il problema, usare il codice seguente:
 
 ```cpp
 unsigned int negativeunsigned()
@@ -40,6 +41,6 @@ unsigned int negativeunsigned()
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
-[ES.106: non tentare di evitare valori negativi utilizzando unsigned](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-nonnegative)
+[ES. 106: non provare a evitare i valori negativi usando unsigned](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-nonnegative)
