--- a/docs/code-quality/c26455.md
+++ b/docs/code-quality/c26455.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26455 DEFAULT_CTOR_NOEXCEPT'
 title: C26455
 ms.date: 12/14/2018
 ms.topic: conceptual
@@ -9,21 +10,21 @@ helpviewer_keywords:
 ms.assetid: 27e86063-d969-49d8-8912-dcc2dc57249f
 author: kylereedmsft
 ms.author: kylereed
-ms.openlocfilehash: faac701768167a9fdff3009620c97a8b0a417e2e
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 32873b4b7dd263d0bb354cc2148176e1f1bbdba5
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418144"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97171096"
 ---
 # <a name="c26455-default_ctor_noexcept"></a>DEFAULT_CTOR_NOEXCEPT C26455
 
-Le C++ linee guida di base indicano che i costruttori predefiniti non devono eseguire operazioni che possono generare. Se è consentita la generazione di un costruttore predefinito, le operazioni come lo spostamento e lo scambio genereranno anche un'operazione indesiderata perché lo spostamento e lo scambio devono sempre avere esito positivo. I costruttori con parametri possono generare.
+Il Linee guida di base di C++ suggerisce che i costruttori predefiniti non devono eseguire operazioni che possono generare. Se è consentita la generazione di un costruttore predefinito, le operazioni come lo spostamento e lo scambio genereranno anche un'operazione indesiderata perché lo spostamento e lo scambio devono sempre avere esito positivo. I costruttori con parametri possono generare.
 
-## <a name="remarks"></a>Note
+## <a name="remarks"></a>Commenti
 
-Si considerino i costruttori predefiniti dei tipi STL, ad esempio `std::vector`. In queste implementazioni, i costruttori predefiniti inizializzano lo stato interno senza eseguire allocazioni. Nel `std::vector` caso, la dimensione è impostata su 0 e il puntatore interno è impostato su `nullptr`. Per tutti i costruttori predefiniti è necessario seguire lo stesso modello.
+Si considerino i costruttori predefiniti dei tipi STL, ad esempio `std::vector` . In queste implementazioni, i costruttori predefiniti inizializzano lo stato interno senza eseguire allocazioni. In `std::vector` tal caso, la dimensione è impostata su 0 e il puntatore interno è impostato su `nullptr` . Per tutti i costruttori predefiniti è necessario seguire lo stesso modello.
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
-- [C++Linee guida di base per questo avviso](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rf-noexcept)
+- [Linee guida di base di C++ per questo avviso](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rf-noexcept)
