commit translated contents

--- a/docs/code-quality/c6288.md
+++ b/docs/code-quality/c6288.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6288'
 title: C6288
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,20 +8,20 @@ f1_keywords:
 helpviewer_keywords:
 - C6288
 ms.assetid: 3856b80a-c9f2-4e86-97fc-c913b0186788
-ms.openlocfilehash: 86fed3163e04a51b4fe8f8aa675bba29ad6976a5
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 083768d08106580edf0e7a739b05862204a911ae
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420076"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97178342"
 ---
 # <a name="c6288"></a>C6288
 
-> avviso C6288: operatore errato: l'inclusione reciproca su & & è sempre zero. Si intendeva invece &#124; &#124; usare?
+> avviso C6288: operatore errato: l'inclusione reciproca su && è sempre zero. Si intendeva usare invece &#124;&#124; ?
 
 Questo avviso indica che in un'espressione di test una variabile viene sottoposta a test su due costanti diverse e il risultato dipende da entrambe le condizioni è true. Il codice in questi casi indica che lo scopo del programmatore non viene acquisito correttamente. È importante esaminare il codice e correggere il problema. in caso contrario, il codice non si comporterà come previsto.
 
-Questo problema è in genere causato dall'utilizzo di `&&`; al posto di `||`, ma può anche essere causato dall'uso di `==` in cui è previsto `!=`.
+Questo problema è in genere causato dall'utilizzo di `&&` ; al posto di `||` , ma può anche essere causato dall'utilizzo di `==` dove `!=` era previsto.
 
 ## <a name="example"></a>Esempio
 
