--- a/docs/code-quality/c6244.md
+++ b/docs/code-quality/c6244.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6244'
 title: C6244
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6244
 ms.assetid: ce2c853d-3354-40f2-a8c5-569f6e4bfc0a
-ms.openlocfilehash: 143b6d1fbb1af8a78a78e1ca3dff25e63524e438
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 292cd68c83f569fb97f88db4053640e985cdd80a
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420468"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97178498"
 ---
 # <a name="c6244"></a>C6244
 
-> avviso C6244: la dichiarazione locale della variabile \<> nasconde la dichiarazione precedente in corrispondenza di \<riga > del file \<>
+> avviso C6244: la dichiarazione locale di \<variable> nasconde la dichiarazione precedente in corrispondenza \<line> di \<file>
 
 Questo avviso indica che una dichiarazione ha lo stesso nome di una dichiarazione in un ambito esterno e nasconde la dichiarazione precedente. Non sarà possibile fare riferimento alla dichiarazione precedente dall'interno dell'ambito locale. Qualsiasi uso previsto della dichiarazione precedente verrà usato come dichiarazione locale. questo avviso identifica solo una sovrapposizione dell'ambito e non la sovrapposizione della durata.
 
