--- a/docs/code-quality/c6246.md
+++ b/docs/code-quality/c6246.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6246'
 title: C6246
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6246
 ms.assetid: cd895cdb-ab3b-4671-ab43-419228fbf980
-ms.openlocfilehash: fd2ff56c5904fcff24d370e8815656a2a95e44aa
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 6aa72f9fd527c7410ea057af122eac4cea598886
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420461"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97178459"
 ---
 # <a name="c6246"></a>C6246
 
-> avviso C6246: la dichiarazione locale della variabile \<> nasconde la dichiarazione con lo stesso nome nell'ambito esterno. Ulteriori informazioni: vedere la dichiarazione precedente in \<percorso >.
+> avviso C6246: la dichiarazione locale di \<variable> nasconde la dichiarazione con lo stesso nome nell'ambito esterno. Ulteriori informazioni: vedere dichiarazione precedente in \<location> .
 
 Questo avviso indica che due dichiarazioni hanno lo stesso nome nell'ambito locale. Il nome nell'ambito esterno è nascosto dalla dichiarazione nell'ambito interno. Qualsiasi uso previsto della dichiarazione di ambito esterno comporterà l'uso della dichiarazione locale.
 
