--- a/docs/code-quality/c6248.md
+++ b/docs/code-quality/c6248.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6248'
 title: C6248
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6248
 ms.assetid: 75743622-7a79-4fe8-81b9-dbdfa1a12f3d
-ms.openlocfilehash: 40202f66049da80cf06ec27b07817cc686ffec66
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 44ed5f74ca3f75a978fc456c73f1c1f15faea63a
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420447"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97178446"
 ---
 # <a name="c6248"></a>C6248
 
@@ -26,7 +27,7 @@ Anche se tutti gli utenti devono accedere a un oggetto, l'oggetto deve essere pr
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso perché un DACL null viene passato alla funzione `SetSecurityDescriptorDacl`:
+Il codice seguente genera questo avviso perché un DACL null viene passato alla `SetSecurityDescriptorDacl` funzione:
 
 ```cpp
 #include <windows.h>
@@ -43,4 +44,4 @@ void f( PSECURITY_DESCRIPTOR pSecurityDescriptor )
 }
 ```
 
-Per vedere un esempio completo su come creare un descrittore di sicurezza, vedere [creazione di un descrittore C++di sicurezza per un nuovo oggetto in ](/windows/desktop/SecAuthZ/creating-a-security-descriptor-for-a-new-object-in-c--). Per ulteriori informazioni, vedere [creazione di un DACL](/windows/desktop/SecBP/creating-a-dacl).
+Per vedere un esempio completo su come creare un descrittore di sicurezza, vedere [creazione di un descrittore di sicurezza per un nuovo oggetto in C++](/windows/desktop/SecAuthZ/creating-a-security-descriptor-for-a-new-object-in-c--). Per ulteriori informazioni, vedere [creazione di un DACL](/windows/desktop/SecBP/creating-a-dacl).
