--- a/docs/code-quality/c6258.md
+++ b/docs/code-quality/c6258.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6258'
 title: C6258
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6258
 ms.assetid: 62f3eed7-d9cd-46eb-8c38-0bc4f647941f
-ms.openlocfilehash: af2adf29a56e6238d8f12e801113e08bc44a19b9
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 3fefbb7827b14bd4c2780fcf495721e572be3da1
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420412"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97178368"
 ---
 # <a name="c6258"></a>C6258
 
-> Avviso C6258: l'uso di TerminateThread non consente la pulizia corretta del thread.
+> avviso C6258: l'uso di TerminateThread non consente la pulizia corretta del thread.
 
 Questo avviso indica che è stata rilevata una chiamata a TerminateThread.
 
@@ -24,15 +25,15 @@ TerminateThread è una funzione pericolosa da usare solo nei casi più estremi. 
 
 ## <a name="to-properly-terminate-threads"></a>Per terminare correttamente i thread
 
-1. Creare un oggetto evento usando la funzione `CreateEvent`.
+1. Creare un oggetto evento utilizzando la `CreateEvent` funzione.
 
 2. Creare i thread.
 
-3. Ogni thread monitora lo stato dell'evento chiamando la funzione `WaitForSingleObject`.
+3. Ogni thread monitora lo stato dell'evento chiamando la `WaitForSingleObject` funzione.
 
-4. Ogni thread termina la propria esecuzione quando l'evento è impostato sullo stato segnalato (`WaitForSingleObject` restituisce `WAIT_OBJECT_0`).
+4. Ogni thread termina la propria esecuzione quando l'evento è impostato sullo stato segnalato ( `WaitForSingleObject` restituisce `WAIT_OBJECT_0` ).
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 - [Terminazione di un thread](/windows/win32/procthread/terminating-a-thread)
 - [WaitForSingleObject](/windows/win32/api/synchapi/nf-synchapi-waitforsingleobject)
