--- a/docs/code-quality/c6289.md
+++ b/docs/code-quality/c6289.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6289'
 title: C6289
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,20 +8,20 @@ f1_keywords:
 helpviewer_keywords:
 - C6289
 ms.assetid: 0fe09974-7577-468b-91a0-62dbe915443e
-ms.openlocfilehash: 6788ac354ee6dc2b3c665abe7648aeee3efc9b28
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 1e412ad68a5ed1717c7c96cf1d628090877bce88
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420062"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97178251"
 ---
 # <a name="c6289"></a>C6289
 
-> avviso C6289: operatore errato: l'esclusione &#124; &#124; reciproca è sempre una costante diversa da zero. Si intendeva usare invece & &?
+> avviso C6289: operatore errato: l'esclusione reciproca su &#124;&#124; è sempre una costante diversa da zero. Si intendeva usare invece && ?
 
 Questo avviso indica che in un'espressione di test una variabile viene sottoposta a test su due costanti diverse e il risultato dipende da una delle due condizioni è true. Viene sempre restituito true.
 
-Questo problema è in genere causato dall'utilizzo di `||` al posto di `&&`, ma può anche essere causato dall'utilizzo di `!=` in cui è previsto `==`.
+Questo problema è in genere causato dall'utilizzo di `||` al posto di `&&` , ma può anche essere causato dall'utilizzo di `!=` dove `==` era previsto.
 
 ## <a name="example"></a>Esempio
 
