commit translated contents

--- a/docs/code-quality/c6226.md
+++ b/docs/code-quality/c6226.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6226'
 title: C6226
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,18 +8,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6226
 ms.assetid: c18aa576-b316-4f11-b48f-f5183fa49c7c
-ms.openlocfilehash: 6ee1b695b91d2cb67c0c4b702a5a4a462798e2f0
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: e0f6c645b721b974597a1ab3fa2ff08cc9c76475
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91499131"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97303121"
 ---
 # <a name="c6226"></a>C6226
 
 > avviso C6226: cast implicito tra tipi integer semanticamente diversi: assegnazione di-1 a HRESULT. In alternativa, provare a usare E_FAIL.
 
-Questo avviso indica che un oggetto `HRESULT` è assegnato o inizializzato su un valore esplicito di-1. Questo avviso è spesso causato da una confusione accidentale di Integer e `HRESULT` tipi. Per indicare l'esito positivo, usare invece la costante simbolica `S_OK` . Per indicare un errore, utilizzare le costanti simboliche che iniziano con E_*costante*, ad esempio `E_FAIL` .
+Questo avviso indica che un oggetto `HRESULT` è assegnato o inizializzato su un valore esplicito di-1. Questo avviso è spesso causato da una confusione accidentale di Integer e `HRESULT` tipi. Per indicare l'esito positivo, usare invece la costante simbolica `S_OK` . Per indicare un errore, utilizzare le costanti simboliche che iniziano con E_ *costante*, ad esempio `E_FAIL` .
 
 Per ulteriori informazioni, vedere le macro [succeeded](/windows/desktop/api/winerror/nf-winerror-succeeded) e [failed](/windows/desktop/api/winerror/nf-winerror-failed) .
 
