--- a/docs/code-quality/c28232.md
+++ b/docs/code-quality/c28232.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28232'
 title: C28232
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28232
 ms.assetid: c616b978-02fa-4a0b-8532-d4249369bca1
-ms.openlocfilehash: 0cf7eb513f82dcd9b813e0ca5253aeabb7f6e6c1
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: b1b1fac984604260e339e94dbe7324a5418afe60
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77421679"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97329259"
 ---
 # <a name="c28232"></a>C28232
 
-> avviso C28232: \_pre\_, \_post\_o \_Deref\_ non applicato ad alcuna annotazione
+> avviso C28232: \_ pre \_ , \_ Post \_ o \_ Deref \_ non applicato ad alcuna annotazione
 
-Questo avviso indica che un operatore `_Pre_`, `_Post_`o `_Deref_` viene visualizzato in un'espressione di annotazione senza una successiva annotazione funzionale. il modificatore è stato ignorato, ma ciò indica un'annotazione codificata in modo errato.
+Questo avviso indica che un `_Pre_` `_Post_` operatore, o `_Deref_` viene visualizzato in un'espressione di annotazione senza un'annotazione funzionale successiva. il modificatore è stato ignorato, ma ciò indica un'annotazione codificata in modo errato.
