commit translated contents

--- a/docs/code-quality/c28104.md
+++ b/docs/code-quality/c28104.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28104'
 title: C28104
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,20 +8,20 @@ f1_keywords:
 helpviewer_keywords:
 - C28104
 ms.assetid: 0dda7e70-7c63-4b6b-a3fc-adad0815f7f4
-ms.openlocfilehash: 2b0e09575f3f0c5b237e2a2c02fda21ac6263627
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 8a7b2cad5fd4856aadd74cd3ef828065d212492b
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417780"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97318247"
 ---
 # <a name="c28104"></a>C28104
 
 > avviso C28104: la risorsa che avrebbe dovuto essere acquisita prima dell'uscita della funzione non è stata acquisita
 
-Una funzione che ha lo scopo di acquisire una risorsa prima della sua uscita è stata chiusa senza acquisire la risorsa. Questo avviso indica che la funzione è annotata con `__drv_acquiresResource` ma non restituisce la risorsa effettivamente acquisita. Se questa funzione è una funzione wrapper, un percorso tramite la funzione non ha raggiunto la funzione di cui è stato eseguito il wrapping. Se l'errore di raggiungere la funzione di cui è stato eseguito il wrapped è perché la funzione ha restituito un errore e non ha acquisito effettivamente la risorsa, potrebbe essere necessario usare un'annotazione condizionale (`__drv_when`).
+Una funzione che ha lo scopo di acquisire una risorsa prima della sua uscita è stata chiusa senza acquisire la risorsa. Questo avviso indica che la funzione è annotata con `__drv_acquiresResource` , ma non restituisce che ha effettivamente acquisito la risorsa. Se questa funzione è una funzione wrapper, un percorso tramite la funzione non ha raggiunto la funzione di cui è stato eseguito il wrapping. Se l'errore di raggiungere la funzione di cui è stato eseguito il wrapped è perché la funzione ha restituito un errore e non ha acquisito effettivamente la risorsa, potrebbe essere necessario usare un'annotazione condizionale ( `__drv_when` ).
 
-Se questa funzione implementa effettivamente l'acquisizione della risorsa, potrebbe non essere possibile per PFD rilevare che la risorsa viene acquisita. In tal caso, utilizzare un avviso `#pragma` per non visualizzare l'errore. È probabilmente possibile posizionare il `#pragma` sulla riga che precede il `{` che inizia il corpo della funzione. Per le funzioni chiamante è ancora necessaria l'annotazione, ma lo strumento di analisi del codice non sarà in grado di rilevare che la risorsa è stata acquisita.
+Se questa funzione implementa effettivamente l'acquisizione della risorsa, potrebbe non essere possibile per PFD rilevare che la risorsa viene acquisita. In tal caso, utilizzare un `#pragma` avviso per disattivare l'errore. È probabilmente possibile posizionare la `#pragma` sulla riga che precede l'oggetto `{` che avvia il corpo della funzione. Per le funzioni chiamante è ancora necessaria l'annotazione, ma lo strumento di analisi del codice non sarà in grado di rilevare che la risorsa è stata acquisita.
 
 ## <a name="example"></a>Esempio
 
