--- a/docs/code-quality/c28106.md
+++ b/docs/code-quality/c28106.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28106'
 title: C28106
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C28106
 ms.assetid: 362ee78e-b1d8-4991-bfd0-c465d084bd58
-ms.openlocfilehash: e4031a4412e54f3f7c2c04c1b8c244dec8c6149b
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 62cbd15332e6dcf0d2f94ea85a6b084eb1382405
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417773"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97318234"
 ---
 # <a name="c28106"></a>C28106
 
-> Avviso C28106: la variabile dispone già di risorse che potrebbero causare perdite
+> avviso C28106: la variabile dispone già di risorse che potrebbero causare perdite
 
 Una variabile che contiene una risorsa viene usata in un contesto in cui è possibile inserire un nuovo valore nella variabile. In tal caso, la risorsa può essere persa e non liberata correttamente, causando una perdita di risorse.
 
