--- a/docs/cpp/w64.md
+++ b/docs/cpp/w64.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: __w64'
 title: __w64
 ms.date: 05/07/2019
 f1_keywords:
@@ -10,12 +11,12 @@ helpviewer_keywords:
 - 64-bit compiler [C++], __w64 keyword
 - Win64 [C++], __w64 keyword
 ms.assetid: b9d0c820-e132-40bc-b532-56edca132a6c
-ms.openlocfilehash: 52069cccfcfb2fef1b28f2f7ee65d771c2c76750
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 2a9ebd8772ee1201b5b5082fe6d437dd4ca47d55
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87213086"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97213260"
 ---
 # <a name="__w64"></a>__w64
 
@@ -30,13 +31,13 @@ Questa parola chiave specifica di Microsoft è obsoleta. Nelle versioni di Visua
 *type*<br/>
 Uno dei tre tipi che potrebbero causare problemi nel codice trasferito da un 32 bit a un compilatore a 64 bit: **`int`** , **`long`** o un puntatore.
 
-*identificatore*<br/>
+*identifier*<br/>
 Identificatore per la variabile in fase di creazione.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 > [!IMPORTANT]
-> L'opzione del compilatore [/Wp64](../build/reference/wp64-detect-64-bit-portability-issues.md) e la **`__w64`** parola chiave sono deprecate in Visual Studio 2010 e Visual Studio 2013 e rimosse a partire da Visual Studio 2013. Se si usa l' `/Wp64` opzione del compilatore nella riga di comando, il compilatore rilascia l'avviso della riga di comando D9002. La **`__w64`** parola chiave viene ignorata automaticamente. Anziché usare questa opzione e questa parola chiave per rilevare i problemi di portabilità a 64 bit, usare un compilatore Microsoft C++ destinato a una piattaforma a 64 bit. Per altre informazioni, vedere [configurare Visual C++ per destinazioni x64 a 64 bit](../build/configuring-programs-for-64-bit-visual-cpp.md).
+> L'opzione del compilatore [/Wp64](../build/reference/wp64-detect-64-bit-portability-issues.md) e la **`__w64`** parola chiave sono deprecate in Visual Studio 2010 e Visual Studio 2013 e rimosse a partire da Visual Studio 2013. Se si usa l' `/Wp64` opzione del compilatore nella riga di comando, il compilatore genera Command-Line avviso D9002. La **`__w64`** parola chiave viene ignorata automaticamente. Anziché usare questa opzione e questa parola chiave per rilevare i problemi di portabilità a 64 bit, usare un compilatore Microsoft C++ destinato a una piattaforma a 64 bit. Per altre informazioni, vedere [configurare Visual C++ per destinazioni x64 a 64 bit](../build/configuring-programs-for-64-bit-visual-cpp.md).
 
 Qualsiasi typedef su cui è installato **`__w64`** deve essere 32 bit su x86 e 64 bit su x64.
 
